refactor: 캐시 문제 인덱스 탐색 줄여 효율성 개선